<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:orientation="horizontal"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/hour_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours_1"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/hour_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours_2" />
                <RadioButton
                android:id="@+id/hour_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_4" />
                <RadioButton
                    android:id="@+id/day_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_1" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="vertical"
        android:gravity="center">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight=".3"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <TextView
                                    android:id="@+id/primoDetails"
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:paddingRight="10dp"
                                    android:text="(-)"/>
                                <TextView
                                    android:id="@+id/rloashDetails"
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:visibility="invisible"
                                    android:paddingRight="10dp"
                                    android:text="(-)"/>
                                <TextView
                                    android:id="@+id/noyaDetails"
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:visibility="invisible"
                                    android:paddingRight="10dp"
                                    android:text="(-)"/>
                            </LinearLayout>
                            <RadioGroup
                                android:id="@+id/carRadioGroup"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <RadioButton
                                    android:id="@+id/primioCarRadioButton"
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:text="@string/primio"
                                    android:checked="true"/>
                                <RadioButton
                                    android:id="@+id/rloashCarRadioButton"
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:text="@string/rloash" />
                                <RadioButton
                                    android:id="@+id/noyaCarNoyaRadioButton"
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:text="@string/noya" />
                            </RadioGroup>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:paddingLeft="5dp"
                                    android:text="৳ : 5000"/>
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:paddingLeft="5dp"
                                    android:text="৳ : 600"/>
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_weight=".3"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:paddingLeft="5dp"
                                    android:text="৳ : 700"/>

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:text="@string/send_request"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight=".2"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/coloSoftBlack">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_services"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/outOfDhakaCityButton"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/out_of_dhaka_city"/>
                <Button
                    android:id="@+id/inDhakaCityButton"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_margin="10dp"
                    android:text="@string/in_dhaka_city"
                    android:background="@drawable/button"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>