<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ride.happyy.user.MainActivity"
    tools:showIn="@layout/app_bar_main">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/linearLayout">
    <Button
        android:id="@+id/inDhakaCity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:textColor="@color/coloSoftWhite"
        android:background="@drawable/button"
        android:text="@string/in_dhaka_city"/>
    <Button
        android:id="@+id/outOfDhakaCity"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:textColor="@color/coloSoftWhite"
        android:background="@drawable/button"
        android:text="@string/out_of_dhaka_city"/>
    <Button
        android:id="@+id/hourlyPackage"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:textColor="@color/coloSoftWhite"
        android:background="@drawable/button"
        android:text="@string/hourly_package"/>

</LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/containFrameLayout">

    </FrameLayout>

</LinearLayout>